tests/baselines/reference/decoratorOnClassProperty6.errors.txt
decoratorOnClassProperty6.ts(4,6): error TS1240: Expression type is not assignable to decorator type 'PropertyDecorator'. Ensure '@dec' has a type assignable to 'PropertyDecorator'.
  The runtime will invoke the decorator with 2 arguments, but the decorator expects 1.


==== decoratorOnClassProperty6.ts (1 errors) ====
    declare function dec(target: Function): void;
    
    class C {
        @dec prop;
         ~~~
!!! error TS1240: Expression type is not assignable to decorator type 'PropertyDecorator'. Ensure '@dec' has a type assignable to 'PropertyDecorator'.
!!! error TS1240:   The runtime will invoke the decorator with 2 arguments, but the decorator expects 1.
    }